--- a/style/s1.css
+++ b/style/s1.css
@@ -96,6 +96,7 @@ main section{
    font-size: 35px;
    font-weight: bold;
    color: #181818;
+   text-align: center;
 }
 .section-description{
     font-size: 18px;
@@ -120,4 +121,45 @@ main section{
     padding:30px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.resume hr{
+ margin: 20px;
+}
+.resume-column-title{
+    font-size: 30px;
+    color: #757575;
+}
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+.experience-title{
+    font-size: 25px;
+    font-weight: bold;
+}
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience ,.experience-sub-title{
+    color: #757575;
+}
+.hide{
+    display: none;
+}
+.footer-title{
+    font-size: 35px;
+}
+.footer-details{
+    font-size: 16px;
+    width: 562px;
+}
+@media screen and (max-width:576px) {
+    .skills-container{
+        flex-direction: column;
+    }
 }
