--- a/style/s1.css
+++ b/style/s1.css
@@ -151,12 +151,30 @@ main section{
 .hide{
     display: none;
 }
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 117px;
+}
+.footer-column{
+  width: 50%;
+}
 .footer-title{
     font-size: 35px;
 }
 .footer-details{
     font-size: 16px;
     width: 562px;
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+height: 64px;
+border-radius: 5px;
+background-color: white;
+display: block;
+width: 100%;
+padding: 10px 20px;
+margin-bottom: 24px;
+border: none;
 }
 @media screen and (max-width:576px) {
     .skills-container{
